--- a/gokusexy.html
+++ b/gokusexy.html
@@ -22,7 +22,7 @@
     </section>
     </div>
     <footer>
-        Estamos a sua espera! Zihahahahahahhahah!!!
+        Estamos a sua espera! Zehahahahahahhahah!!!
     </footer>
    
     <style>
