--- a/gokusexy.html
+++ b/gokusexy.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <header>Starr Park</header>
-    <h1>Bem-Vindo a porra do Starr Park nessa merda!</h1>
+    <h1>Bem-Vindo ao Starr Park!</h1>
     <h2>Let's play guys!</h2>
     <div>
         <img src="hopi-hari-melhores-parques-brasil.jpg" alt="">
